--- a/index.html
+++ b/index.html
@@ -6,16 +6,36 @@
     <title>X4 Heroes Wiki</title>
 </head>
 
-<body>
-    <div class="portal">
-        <div class="portal__header">Cartas más recientes</div>
+<body class="dark loaded" data-v-app="" czshortcut-listen="true">
+    <div id="app">
+        <div class="col-12 mt-3">
+            <div id="recent-cards" class="card">
+                <h5 class="card-header text-center righteous">Cartas más recientes</h5>
+            </div>
+            <div class="card-body">
+                <div class="row aling-items-center justify-content-center">
+                    <div class="col-auto">
+                        <a class="card-thumb-wrapper" href="Card 00001.html" style="width: 126px; height: 153;">
+                            <div class="card-thumb" style="transform: scale(0.9);">
+                                <!--v-if-->
+                                <img class="card-thumb-bg" src="thumb/TEQ.png" loading="lazy" alt="">
+                                <!--v-if-->
+                                <img class="card-thumb-character" src="Cards/card_00001_thumb.png" loading="lazy" alt="Thumbnail image for Ben Bigger">
+                                <!--v-if-->
+                                <img class="card-rarity" src="Rarity/cha_rare_sm_ssr.png" loading="lazy">
+                                <img class="card-element" src="Type/TEQ_icon.png" loading="lazy">
+                                <!--v-if-->
+                                <!--v-if-->
+                                <!--v-if-->
+                                <div class="card-info-box dokkan-box teq">
+                                    <span style="font-size: 15px;">Jasson Frost (Humano)</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+            </div>
+        </div>
     </div>
-    <tr>
-        <th colspan="2" align="center">
-            <span typeof="mw:file">
-                <a href="The Spark Ignited By Thousands Of Battles Ben Bigger.html" title="The Spark Ignited By Thousands Of Battles Ben Bigger">
-                    <img class="mw-file-element" src="Cards/Placeholder_Icon.png" decoding="async" loading="lazy" width="80" height="70" data-image-name="Card 1 Thumb.png"daat-image-key="Card_1_Thumb.png" data-relevant="1">
-                </a>
-        </th>
-    </tr>
+    
 </body>
+
