--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
 </head>
 
 <body class="dark loaded" data-v-app="" czshortcut-listen="true">
-    <div id="app">
         <div class="col-12 mt-3">
             <div id="recent-cards" class="card">
                 <h5 class="card-header text-center righteous">Cartas más recientes</h5>
             </div>
             <div class="card-body">
-                <div class="row aling-items-center justify-content-center">
+                <div class="row align-items-center justify-content-center">
                     <div class="col-auto">
                         <a class="card-thumb-wrapper" href="Card 00001.html" style="width: 126px; height: 153;">
                             <div class="card-thumb" style="transform: scale(0.9);">
                                 <!--v-if-->
                                 <img class="card-thumb-bg" src="thumb/TEQ.png" loading="lazy" alt="">
                                 <!--v-if-->
-                                <img class="card-thumb-character" src="Cards/card_00001_thumb.png" loading="lazy" alt="Thumbnail image for Ben Bigger">
+                                <img class="card-thumb-character" src="Cards/card_00001_thumb.png" loading="lazy" alt="Thumbnail image for Jasson Frost">
                                 <!--v-if-->
                                 <img class="card-rarity" src="Rarity/cha_rare_sm_ssr.png" loading="lazy">
                                 <img class="card-element" src="Type/TEQ_icon.png" loading="lazy">
@@ -33,9 +32,27 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-auto">
+                        <a class="card-thumb-wrapper" href="Card 00002.html" style="width: 126px; height: 153;">
+                            <div class="card-thumb" style="transform: scale(0.9);">
+                                <!--v-if-->
+                                <img class="card-thumb-bg" src="thumb/TEQ.png" loading="lazy" alt="">
+                                <!--v-if-->
+                                <img class="card-thumb-character" src="Cards/card_00002_thumb.png" loading="lazy" alt="Thumbnail image for Jasson Frost">
+                                <!--v-if-->
+                                <img class="card-rarity" src="Rarity/cha_rare_sm_ur.png" loading="lazy">
+                                <img class="card-element" src="Type/STEQ_icon.png" loading="lazy">
+                                <!--v-if-->
+                                <!--v-if-->
+                                <!--v-if-->
+                                <div class="card-info-box dokkan-box teq">
+                                    <span style="font-size: 15px;">Jasson Frost (Humano)</span>
+                                </div>
+                            </div>
+                        </a>
+                </div>
             </div>
         </div>
     </div>
-    
 </body>
 
